DataCloudVirtualization/objects/DC_Integration_Query_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <inlineHelpText>This field represents the name shown on the UI.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <inlineHelpText>Please use the prefix &apos;Salesforce_&apos; before the Org Id, e.g., Salesforce_00DC3000000Qw0I</inlineHelpText>
        <label>Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DC Integration Query Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Query Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DC Integration Query Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>